objects/AAT_Request__c.object
<CustomObject>
    <fields>
        <fullName>AAT_CIA_Team_Meeting_Minutes__c</fullName>
        <inlineHelpText>Comments here will be overwritten during the CIA approval comments.</inlineHelpText>
        <label>AAT CIA Team Approval Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AAT_Meeting_Minutes__c</fullName>
        <inlineHelpText>Meeting Minutes of the AAT meetings.</inlineHelpText>
        <label>AAT Meeting Minutes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AAT_Technical_Team_Meeting_Minutes__c</fullName>
        <inlineHelpText>Comments will be overwritten by the comments in the Technical Approval Comments</inlineHelpText>
        <label>AAT Technical Approval Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CIA_Tech_Approval_Text__c</fullName>
        <description>This text is used in Email templates</description>
        <formula>IF(ISBLANK(PDT_Approver__c),IF(Is_CIA_Approved__c &amp;&amp; !Is_Technical_Approved__c,&quot;approved by CIA and pending from technical&quot;, IF(!Is_CIA_Approved__c &amp;&amp; Is_Technical_Approved__c,&quot;approved by technical and pending from CIA&quot;,&quot;Fully Approved&quot;)),IF(Is_CIA_Approved__c &amp;&amp; !Is_Technical_Approved__c &amp;&amp; !Is_PDT_Approved__c, &quot;approved by CIA and pending from technical&quot;, IF(!Is_CIA_Approved__c &amp;&amp; Is_Technical_Approved__c &amp;&amp; !Is_PDT_Approved__c,&quot;approved by technical and pending from CIA&quot;,IF(Is_Technical_Approved__c &amp;&amp; Is_CIA_Approved__c &amp;&amp; Is_PDT_Approved__c,&quot;Fully Approved&quot;,&quot;approved by CIA&amp;Technical pending from PDT&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CIA/Tech Approval Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluate_Technical_CIA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evaluate Technical/CIA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_CIA_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is CIA Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_PDT_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is PDT Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Technical_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Technical Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting_Span__c</fullName>
        <label>Meeting Span</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>15 min</fullName>
                    <default>true</default>
                    <label>15 min</label>
                </value>
                <value>
                    <fullName>5 min</fullName>
                </value>
                <value>
                    <fullName>10 min</fullName>
                </value>
                <value>
                    <fullName>30 min</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_AAT_Meeting_End__c</fullName>
        <label>Next AAT Meeting End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Next_AAT_Meeting__c</fullName>
        <inlineHelpText>Once the Next AAT Meeting date has been assigned, the Stage will move to &quot;Under Review&quot;</inlineHelpText>
        <label>Next AAT Meeting Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Notify_Administrator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Administrator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PDT_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PDT Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AAT_Request_PDT</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PDT_Meeting_Minutes__c</fullName>
        <label>PDT Meeting Minutes</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PDT_Queue_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PDT Queue Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_AAT_Meeting_End__c</fullName>
        <label>Previous AAT Meeting End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Previous_AAT_Meeting__c</fullName>
        <label>Previous AAT Meeting Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ready_for_CIA_Technical_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If it is checked it will submit for approvals</inlineHelpText>
        <label>Ready for CIA/Technical Approval ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequestDescription__c</fullName>
        <label>Detailed Change Request</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RequestTechnology__c</fullName>
        <label>Technology</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>9SF/Cu08</fullName>
                </value>
                <value>
                    <fullName>10SF/Cu65HP</fullName>
                </value>
                <value>
                    <fullName>12S/Cu45HP</fullName>
                </value>
                <value>
                    <fullName>13S/Cu32HP</fullName>
                </value>
                <value>
                    <fullName>14nm/FX14</fullName>
                </value>
                <value>
                    <fullName>8SF/Cu11</fullName>
                </value>
                <value>
                    <fullName>7nm/FX7</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Description__c</fullName>
        <label>Request Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Edit__c</fullName>
        <label>Request Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Ready for Review</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>AAT Request</label>
    <listViews>
        <fullName>AAT_CIA_Team_AAT_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>AAT CIA Team</label>
        <queue>AAT_CIA_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AAT_Technical_Team_AAT_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>AAT Technical Team</label>
        <queue>AAT_Technical_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Meetings</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Request_Description__c</columns>
        <columns>Stage__c</columns>
        <columns>Next_AAT_Meeting__c</columns>
        <columns>Next_AAT_Meeting_End__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Next_AAT_Meeting__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Next_AAT_Meeting_End__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Meetings</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X12S_Cu45HP_AAT_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>12S/Cu45HP</label>
        <queue>X12S_Cu45HP</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X13S_Cu32HP_AAT_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>13S/Cu32HP</label>
        <queue>X13S_Cu32HP</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X14nm_FX14_AAT_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>14nm/FX14</label>
        <queue>X14nm_FX14</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X7nm_FX7_AAT_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>7nm/FX7</label>
        <queue>X7nm_FX7</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>AAT-{0000}</displayFormat>
        <label>AAT  Request No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AAT Request</pluralLabel>
    <recordTypes>
        <fullName>AAT_Change_Request</fullName>
        <active>true</active>
        <label>AAT Change Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Meeting_Date</fullName>
        <active>false</active>
        <errorConditionFormula>Next_AAT_Meeting__c &gt;=  Next_AAT_Meeting_End__c</errorConditionFormula>
        <errorDisplayField>Next_AAT_Meeting_End__c</errorDisplayField>
        <errorMessage>Next AAT Meeting End Date should be always greater than start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Next_AAT_Meeting_Mandatory_to_Submit</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Next_AAT_Meeting__c) &amp;&amp;  Ready_for_CIA_Technical_Approval__c</errorConditionFormula>
        <errorDisplayField>Next_AAT_Meeting__c</errorDisplayField>
        <errorMessage>Please fill Next AAT Meeting Start Date/Time in order make it ready for CIA/Technical Team Approvals</errorMessage>
    </validationRules>
</CustomObject>